--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 <body>
     <header>
-        <h1>FOEN MC服务器</h1>
+        <h1>FOEN Network</h1>
         <nav>
             <ul>
                 <li><a href="#home">首页</a></li>
@@ -197,17 +197,17 @@
         <h2>服务器特色</h2>
         <div class="feature">
             <img src="icon_pvp.png" alt="PVP图标">
-            <h3>刺激PVP</h3>
-            <p>参与激烈的玩家对战，展现你的战斗技巧。</p>
+            <h3>红石与生电</h3>
+            <p>独立服务器，请移步至隔壁FORW）</p>
         </div>
         <div class="feature">
             <img src="icon_survival.png" alt="生存图标">
-            <h3>生存挑战</h3>
-            <p>在资源有限的世界中努力生存，打造你的家园。</p>
+            <h3>养老生存</h3>
+            <p>边养老，边生存，打造你的家园。</p>
         </div>
         <div class="feature">
             <img src="icon_custom.png" alt="自定义图标">
-            <h3>自定义玩法</h3>
+            <h3>高可玩性</h3>
             <p>丰富的插件和自定义内容，带来前所未有的体验。</p>
         </div>
     </section>
