--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
         <p>Java版服务器地址：<span class="server-address">mc.foen.us.kg</span></p>
         <p>基岩版服务器地址：<span class="server-address">gmt.rainplay.cn:44071</span></p>
         <a href="https://minecraft.net/download" class="cta-button" target="_blank">下载Minecraft</a>
+        <a href="minecraft://" class="cta-button" target="_blank">使用手机？点击开始！</a>
     </section>
     <section id="community" class="community">
         <h2>社区互动</h2>
