--- a/index.html
+++ b/index.html
@@ -229,13 +229,8 @@
     </section>
     <section id="community" class="community">
         <h2>社区互动</h2>
-        <p>加入我们的Discord服务器，与其他玩家交流互动：<a href="https://discord.gg/foenmc"
+        <p>加入我们频道，与其他玩家交流互动：<a href="https://pd.qq.com/s/h3vgx0rd1?shareSource=5&businessType=9"
                 target="_blank">点击加入</a></p>
-        <p>关注我们的社交媒体：
-            <a href="#" target="_blank"><img src="icon_facebook.png" alt="Facebook图标"></a>
-            <a href="#" target="_blank"><img src="icon_twitter.png" alt="Twitter图标"></a>
-            <a href="#" target="_blank"><img src="icon_youtube.png" alt="YouTube图标"></a>
-        </p>
     </section>
     <footer>
         <p>&copy; 2025 FOEN MC服务器. 版权所有.</p>
