--- a/index.html
+++ b/index.html
@@ -229,11 +229,11 @@
     </section>
     <section id="community" class="community">
         <h2>社区互动</h2>
-        <p>加入我们频道，与其他玩家交流互动：<a href="https://pd.qq.com/s/h3vgx0rd1?shareSource=5&businessType=9"
+        <p>加入我们频道，与其他玩家交流互动：<a href="https://pd.qq.com/s/h3vgx0rd1?shareSource=5&businessType=9" class="cta-button"
                 target="_blank">点击加入</a></p>
     </section>
     <footer>
-        <p>&copy; 2025 FOEN MC服务器. 版权所有.</p>
+        <p>&copy; Copyright FOEN Team 2025.</p>
     </footer>
     <script>
         // 这里可以添加JavaScript交互逻辑，目前示例中暂未添加具体功能
