--- a/index.html
+++ b/index.html
@@ -8,97 +8,126 @@
     <style>
         /* 全局样式 */
         body {
-            font - family: Arial, sans - serif;
+            font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background - color: #111;
+            background-color: #111;
             color: #fff;
         }
 
         /* 头部样式 */
         header {
-            background - color: #333;
+            background-color: #333;
+            display: flex;
+            align-items: center;
+            /* 使标题和导航栏在同一高度 */
+        }
+
+        h1 {
+            margin: 0;
             padding: 10px;
-            text - align: center;
+        }
+
+        nav {
+            margin-left: auto;
         }
 
         nav ul {
-            list - style - type: none;
+            list-style-type: none;
             margin: 0;
             padding: 0;
+            display: flex;
+            /* 初始为横向布局 */
         }
 
         nav ul li {
-            display: inline;
-            margin - right: 20px;
+            margin-right: 20px;
         }
 
         nav ul li a {
             color: #fff;
-            text - decoration: none;
+            text-decoration: none;
         }
 
         nav ul li a:hover {
-            text - decoration: underline;
+            text-decoration: underline;
+        }
+
+        /* 媒体查询，当屏幕宽度小于600px时，导航栏纵向显示 */
+        @media (max - width: 600px) {
+            nav ul {
+                flex - direction: column;
+                /* 纵向布局 */
+                position: absolute;
+                top: 100%;
+                left: 0;
+                width: 100%;
+                background - color: #333;
+                text-align: center;
+            }
+
+            nav ul li {
+                margin: 10px 0;
+            }
         }
 
         /* 首页英雄部分样式 */
-   .hero {
+      .hero {
             position: relative;
             height: 400px;
             overflow: hidden;
         }
 
-   .hero img {
+      .hero img {
             width: 100%;
             height: 100%;
             object - fit: cover;
             filter: brightness(70%);
         }
 
-   .hero - content {
+      .hero - content {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            text - align: center;
+            text-align: center;
         }
 
-   .hero - content h2 {
+      .hero - content h2 {
             font - size: 36px;
-            margin - bottom: 20px;
+            margin-bottom: 20px;
         }
 
-   .hero - content p {
+      .hero - content p {
             font - size: 18px;
-            margin - bottom: 30px;
+            margin-bottom: 30px;
         }
 
-   .cta - button {
+      .cta - button {
             display: inline - block;
             background - color: #007BFF;
             color: #fff;
             padding: 10px 20px;
-            text - decoration: none;
+            text-decoration: none;
             border - radius: 5px;
             font - size: 16px;
         }
 
-   .cta - button:hover {
+      .cta - button:hover {
             background - color: #0056b3;
         }
 
         /* 特色部分样式 */
-   .features {
+      .features {
             padding: 50px;
-            text - align: center;
+            text-align: center;
         }
 
-   .features h2 {
-            margin - bottom: 30px;
+      .features h2 {
+            margin-bottom: 30px;
         }
 
-   .feature {
+      .feature {
             display: inline - block;
             width: 300px;
             margin: 20px;
@@ -107,64 +136,65 @@
             border - radius: 10px;
         }
 
-   .feature img {
+      .feature img {
             width: 80px;
             height: 80px;
         }
 
-   .feature h3 {
-            margin - top: 20px;
-            margin - bottom: 10px;
+      .feature h3 {
+            margin-top: 20px;
+            margin-bottom: 10px;
         }
 
         /* 规则部分样式 */
-   .rules {
+      .rules {
             padding: 50px;
-            text - align: left;
+            text-align: left;
         }
 
-   .rules h2 {
-            margin - bottom: 20px;
+      .rules h2 {
+            margin-bottom: 20px;
         }
 
-   .rules ul {
-            margin - left: 20px;
+      .rules ul {
+            margin-left: 20px;
         }
 
         /* 加入部分样式 */
-   .join {
+      .join {
             padding: 50px;
-            text - align: center;
+            text-align: center;
         }
 
-   .join h2 {
-            margin - bottom: 20px;
+      .join h2 {
+            margin-bottom: 20px;
         }
 
-   .join.server - address,
-   .join.server - port {
+      .join.server - address,
+      .join.server - port {
             font - size: 20px;
             font - weight: bold;
         }
 
         /* 社区部分样式 */
-   .community {
+      .community {
             padding: 50px;
-            text - align: center;
+            text-align: center;
         }
 
-   .community h2 {
-            margin - bottom: 20px;
+      .community h2 {
+            margin-bottom: 20px;
         }
 
-   .community.cta - button {
+      .community.cta - button {
+            /* 如有社区按钮特殊样式可在此添加 */
         }
 
         /* 底部样式 */
         footer {
             background - color: #333;
             padding: 10px;
-            text - align: center;
+            text-align: center;
         }
     </style>
 </head>
