--- a/index.html
+++ b/index.html
@@ -188,24 +188,24 @@
     <section id="home" class="hero">
         <img src="https://s2.loli.net/2025/01/29/JSH5xAUzaZtgE4v.png" alt="FOEN">
         <div class="hero-content">
-            <h2>欢迎来到FOEN的Minecraft世界</h2>
+            <h2>欢迎来到FOEN Network</h2>
             <p>在这里开启你的独特冒险之旅！</p>
             <a href="#join" class="cta-button">立即加入</a>
         </div>
     </section>
     <section id="features" class="features">
         <h2>服务器特色</h2>
-        <div class="feature">
+        <div>
             <img src="icon_pvp.png" alt="PVP图标">
             <h3>红石与生电</h3>
             <p>独立服务器，请移步至隔壁FORW）</p>
         </div>
-        <div class="feature">
+        <div>
             <img src="icon_survival.png" alt="生存图标">
             <h3>养老生存</h3>
             <p>边养老，边生存，打造你的家园。</p>
         </div>
-        <div class="feature">
+        <div>
             <img src="icon_custom.png" alt="自定义图标">
             <h3>高可玩性</h3>
             <p>丰富的插件和自定义内容，带来前所未有的体验。</p>
