--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 target="_blank">点击加入</a></p>
     </section>
     <footer>
-        <p>&copy; Copyright FOEN Team 2025.</p>
+        <p>&copy; Copyright FOEN Network 2025.</p>
     </footer>
     <script>
         // 这里可以添加JavaScript交互逻辑，目前示例中暂未添加具体功能
