--- a/index.html
+++ b/index.html
@@ -196,19 +196,19 @@
     <section id="features" class="features">
         <h2>服务器特色</h2>
         <div>
-            <img src="icon_pvp.png" alt="PVP图标">
+            <img src="https://s2.loli.net/2025/01/29/hX1EJwMPOv9Azul.jpg" alt="PVP图标">
             <h3>红石与生电</h3>
             <p>独立服务器，请移步至隔壁FORW）</p>
         </div>
         <div>
-            <img src="icon_survival.png" alt="生存图标">
+            <img src="https://s2.loli.net/2025/01/29/S6d2U5EtfnHmiTq.jpg" alt="生存图标">
             <h3>养老生存</h3>
             <p>边养老，边生存，打造你的家园。</p>
         </div>
         <div>
-            <img src="icon_custom.png" alt="自定义图标">
+            <img src="https://s2.loli.net/2025/01/29/o3Ef4letsVGX8ha.jpg" alt="自定义图标">
             <h3>高可玩性</h3>
-            <p>丰富的插件和自定义内容，带来前所未有的体验。</p>
+            <p>丰富的插件，带来前所未有的体验。</p>
         </div>
     </section>
     <section id="rules" class="rules">
